# Polymarket-Copy-Trading-Bot

./: README.md
Rust/: .gitignore  Cargo.toml  README.md  check_rust.ps1  env.example  install_dependencies.sh  install_rust.ps1
Rust/src/: main.rs
Rust/src/config/: copy_strategy.rs  env.rs  mod.rs
Rust/src/interfaces/: user.rs
Rust/src/models/: mod.rs  user_history.rs
Rust/src/services/: create_clob_client.rs  mod.rs  trade_executor.rs  trade_monitor.rs
Rust/src/utils/: create_clob_client.rs  errors.rs  fetch_data.rs  get_my_balance.rs  health_check.rs  logger.rs  mod.rs  post_order.rs
TypeScript/: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  package-lock.json
TypeScript/docs/: GETTING_STARTED.md  MULTI_TRADER_GUIDE.md  SIMULATION_QUICKSTART.md  SIMULATION_RUNNER_GUIDE.md
TypeScript/src/scripts/: aggregateResults.ts  fetchHistoricalTrades.ts  findMyEOA.ts  sellLargePositions.ts  transferPositionsToGnosisSafe.ts
TypeScript/src/utils/: errorHelpers.ts  positionHelpers.ts  postOrder.ts
